<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="YOUR_PROJECT">YOUR PROJECT</string>
    <string name="Please_select_questionnaire">Please select Questionnaire</string>
    <string name="title_activity_customer_look_up">CUSTOMER LOOKUP</string>
    <string name="customer_look_up_hint_name">Name</string>
    <string name="customer_look_up_hint_surname">Surname</string>
    <string name="customer_look_up_hint_tel">Telephone</string>
    <string name="not_found_customer_header">Customer not found with your criteria</string>
    <string name="not_found_customer_detail">You can create new customer by clicking at "ADD Customer" button</string>
    <string name="title_activity_customer_look_info">CUSTOMER INFORMATION</string>
    <string name="please_fill_completed">Please fill your information</string>
    <string name="add_customer_prefix">Title</string>
    <string name="add_customer_prefix_extra">Position/Rank</string>
    <string name="add_customer_name">Name</string>
    <string name="add_customer_surname">Surname</string>
    <string name="add_customer_nickname">Nickname</string>
    <string name="add_customer_birthday">Date of Birth</string>
    <string name="add_customer_email">Email</string>
    <string name="add_customer_work">Office/Company</string>
    <string name="add_customer_district">District</string>
    <string name="add_customer_tel_home_BKK_line1">Home</string>
    <string name="add_customer_tel_home_BKK_line2">Phone</string>
    <string name="add_customer_mobilenumber">Mobile Phone</string>
    <string name="add_customer_mobile_line1">Mobile</string>
    <string name="add_customer_mobile_line2">Phone</string>
    <string name="add_customer_homeid">Home No</string>
    <string name="add_customer_moo">Moo</string>
    <string name="add_customer_building">Village/Building</string>
    <string name="add_customer_floor">Floor</string>
    <string name="add_customer_room">Room No</string>
    <string name="add_customer_soi">Soi</string>
    <string name="add_customer_road">Road</string>
    <string name="add_customer_province">Province</string>
    <string name="add_customer_sub_district">Sub district</string>
    <string name="add_customer_postcode">Postal Code</string>
    <string name="add_customer_other_country">Country</string>
    <string name="add_customer_nationality">Nationality</string>
    <string name="popup_mobile">Mobile Phone</string>
    <string name="popup_phone">Home Phone</string>
    <string name="header_list_name">NAME</string>
    <string name="header_list_surname">SURNAME</string>
    <string name="header_list_unitnumber">UNIT NUMBER</string>
    <string name="header_list_contactID">CONTACT ID</string>
    <string name="header_list_lastVisit">LAST VISIT AP</string>
    <string name="header_list_opp">Opp.</string>
    <string name="title_activity_customer_list">RESULTS</string>
    <string name="address">Address</string>
    <string name="telephone">Telephone</string>
    <string name="title_customer_info">Please verify your information</string>
    <string name="question">QUESTION</string>
    <string name="of">OF</string>
    <string name="mini_question">MINI QUESTION</string>
    <string name="default_display_13">Please select answer</string>
    <string name="title_dont_answer">Question client do not answer</string>
    <string name="default_display_14_15">click - + for answer</string>
    <string name="default_display_16">Please select answer</string>

    <string name="is_offine">The application is operating offline mode.</string>
    <string name="is_offine_Revisit">ขณะนี้อยู่ในโหมดออฟไลน์ ไม่สามารถใช้ปุ่ม Revisit ได้</string>

    <string name="add_mobile">+ add mobile</string>
    <string name="cannot_back">This is first question, Cannot Back</string>
    <string name="Please_enter">Please enter answer</string>
    <string name="Please_enter_txtbox_in_question">Please enter answer</string>
    <string name="answer_finish">You are complete your questionnaire</string>
    <string name="email_not_correct">E-MAIL IS INVALID</string>

    <!--<string name="save_complete">Complete information</string>-->
    <string name="save_complete">You can select new Project or Questionnaire by clicking at button below</string>

    <string name="msg_offline_not_found_customer">"ขณะนี้อยู่ในโหมดออฟไลน์ กรุณาเพิ่มชื่อลูกค้าใหม่"</string>
    <string name="msg_offline">"ขณะนี้อยู่ในโหมดออฟไลน์ ข้อมูลจะถูกอัพโหลดอัตโนมัติ เมื่อมีการเชื่อมต่ออินเตอร์เน็ต"</string>
    <string name="is_offine_GotoQuestionnaire">ขณะนี้อยู่ในโหมดออฟไลน์ กรุณาเพิ่มชื่อลูกค้าใหม่</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="app_name">AP-Questionaire</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_projects">ProjectsActivity</string>
    <string name="btnLogin">LOGIN</string>
    <string name="title_activity_questionniare">Please select Questionnaire</string>
    <string name="btn_back">BACK</string>
    <string name="btn_next">NEXT</string>
    <string name="title_activity_display01">Display01Activity</string>
    <string name="btn_forgot">FORGOT PASSWORD?</string>
    <string name="btn_syncGEO">sync GEO</string>
    <string name="title_activity_reset_password">RESET PASSWORD</string>
    <string name="reset_password_question">กรุณากรอกอีเมล์ของท่าน</string>
    <string name="reset_password_desricption">ระบบจะส่ง Password ให้ท่านตามที่กรอกไว้</string>
    <string name="reset_password_hint">Email address</string>
    <string name="title_activity_reset_password_complate">PASSWORD SEND</string>
    <string name="reset_password_complate_header">ระบบได้ส่ง Password ให้ทางอีเมลของท่านแล้ว</string>
    <string name="reset_password_complate_detail">กรุณาตรวจสอบและ login ใหม่อีกครั้ง</string>
    <string name="title_activity_display03">Display03Activity</string>
    <string name="title_activity_not_found_customer">NotFoundCustomerActivity</string>
    <string name="title_activity_add_customer">AddCustomerActivity</string>
    <string name="title_activity_display04">Display04Activity</string>
    <string name="title_activity_display05">Display05Activity</string>
    <string name="title_activity_display06">Display06Activity</string>
    <string name="title_activity_display07">Display07Activity</string>
    <string name="title_activity_display08">Display08Activity</string>
    <string name="title_activity_display09">Display09Activity</string>
    <string name="title_activity_display10">Display10Activity</string>
    <string name="title_activity_display11">Display11Activity</string>
    <string name="title_activity_display12">Display12Activity</string>
    <string name="title_activity_display13">Display13Activity</string>
    <string name="title_activity_display14">Display14Activity</string>
    <string name="title_activity_display15">Display15Activity</string>
    <string name="title_activity_display17">Display17Activity</string>
    <string name="title_activity_display18">Display18Activity</string>
    <string name="title_activity_display19">Display19Activity</string>
    <string name="title_activity_customer_infomation">CustomerInfomationActivity</string>
    <string name="update_data">อัพเดทข้อมูล</string>
    <string name="title_activity_customer_finished_answer">CustomerFinishedAnswerActivity</string>
    <string name="thanks2">ที่ท่านได้สละเวลาในการตอบแบบสอบถามครั้งนี้</string>
    <string name="customer_full_name">[ NAME SURNAME ]</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="back_to_project">0</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="menu_home">Home</string>
    <string name="menu_logout">Logout</string>
    <string name="title_activity_display16">Display16Activity</string>
    <string name="title_activity_display20">Display20Activity</string>
    <string name="title_activity_display21">Display21Activity</string>
    <string name="title_activity_add_customer_one">AddCustomerOneActivity</string>
    <string name="title_activity_add_customer_en">AddCustomerENActivity</string>
    <string name="title_activity_add_customer_th">AddCustomerTHActivity</string>
    <string name="title_activity_do_not_answer_list">DoNotAnswerListActivity</string>
    <string name="txtPromp">Please select</string>
    <string name="error_customer_one">Please enter required information</string>
    <string name="error_customer_one_emailformat">Please enter valid email</string>
    <string name="error_customer_one_mobileformat">Please complete "Mobile number"</string>
    <string name="error_customer_one_telhomeformat">Please complete "Telephone number"</string>
    <string name="error_add_phone">Please input your phone number</string>
    <string name="error_textbox_number">Please fill answer in selected blank</string>
    <string name="error_textbox_freetext">Please fill answer in selected blank</string>
    <string name="error_textbox_datetime">Please specify date</string>
    <string name="title_activity_flag">FlagActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_flag">Please select your Questionnaire language</string>
    <string name="flag_name_TH">Thai</string>
    <string name="flag_name_EN">English</string>
    <string name="error_lookup_name">Please enter "Name" minimum 2 characters</string>
    <string name="error_lookup_surname">Please enter "Last Name" minimum 2 characters</string>
    <string name="error_lookup_tel">Please enter "Mobile Number" minimum 4 digits</string>
    <string name="error_customer_one_mobileformat2digit">Please enter valid "Mobile number"</string>

    <string name="alert_warning">Warning</string>

</resources>
