<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/root_view"
    tools:context="com.apthai.ap_questionaire.app.AddCustomerENActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/img_background"
        android:layout_below="@+id/project_name" />
    <TextView
        android:layout_width="match_parent"
        android:gravity="center"
        android:background="@color/TITLE"
        android:layout_height="50dp"
        android:id="@+id/project_name" />
    <ImageButton
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:id="@+id/btnMenu"
        android:scaleType="center"
        android:layout_alignParentStart="true"
        android:src="@drawable/menu"
        android:layout_alignParentTop="true" />
    <ImageButton
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:id="@+id/btnEN"
        android:scaleType="center"
        android:src="@drawable/btn_en"
        android:layout_toLeftOf="@+id/btnTH"
        android:layout_alignParentTop="true" />
    <ImageButton
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:id="@+id/btnTH"
        android:scaleType="center"
        android:layout_alignParentRight="true"
        android:src="@drawable/btn_th"
        android:layout_alignParentTop="true" />
    <LinearLayout
        android:id="@+id/sizeContent"
        android:layout_width="1200dp"
        android:layout_height="fill_parent"
        android:background="@color/WHITE"
        android:orientation="vertical"
        android:layout_marginTop="50dp"
        android:layout_centerHorizontal="true"
        android:baselineAligned="false"
        android:clickable="false">
        <TextView
            android:layout_marginTop="20dp"
            android:text="@string/title_activity_customer_look_info"
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_height="30dp"
            android:id="@+id/question_title"
            />
        <TextView
            android:layout_width="400dp"
            android:layout_height="1dp"
            android:id="@+id/lbl_line"
            android:layout_margin="30dp"
            android:background="@color/line"
            android:layout_alignBottom="@+id/question_title"
            android:layout_gravity="center_horizontal" />
        <ScrollView
            android:layout_alignBottom="@+id/lbl_line"
            android:layout_alignTop="@+id/footer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:id="@+id/scrollView"
            android:layout_gravity="center"
            android:fillViewport="false">
            <LinearLayout
                android:id="@+id/AP_contents"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical" >

                <TextView
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/txt_header"
                    android:layout_marginTop="10dp"
                    android:textSize="25dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/please_fill_completed"
                    android:layout_alignBottom="@+id/question_title"
                    android:layout_gravity="center_horizontal" />

                <LinearLayout
                    android:id="@+id/layout_customer_add_line5"
                    android:layout_marginTop="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal" >
                    <TextView
                        android:text="@string/add_customer_homeid"
                        android:layout_width="120dp"
                        android:gravity="center_vertical"
                        android:layout_height="50dp"
                        android:paddingLeft="10dp"

                        android:id="@+id/lblHomeID"
                        />
                    <EditText
                        android:id="@+id/txtHomeID"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:background="@drawable/box_small"
                        android:alpha="1"
                        android:lines="1"
                        android:singleLine="true"

                        android:paddingLeft="10dp"
                        android:hint="@string/add_customer_homeid" />
                    <TextView
                        android:text="@string/add_customer_moo"
                        android:layout_width="70dp"
                        android:gravity="center"
                        android:layout_height="50dp"
                        android:id="@+id/lbl_add_customer_moo"
                        />
                    <EditText
                        android:id="@+id/txtMoo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/box_small"
                        android:alpha="1"
                        android:lines="1"

                        android:singleLine="true"
                        android:paddingLeft="10dp"
                        android:hint="@string/add_customer_moo" />
                    <TextView
                        android:text="@string/add_customer_building"
                        android:layout_width="120dp"
                        android:gravity="center_vertical"
                        android:paddingLeft="10dp"
                        android:layout_height="50dp"

                        android:id="@+id/lbl_add_customer_building"
                        />
                    <EditText
                        android:id="@+id/txtBuilding"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/box_large"
                        android:alpha="1"
                        android:paddingLeft="10dp"
                        android:lines="1"

                        android:singleLine="true"
                        android:hint="@string/add_customer_building" />
                    <TextView
                        android:text="@string/add_customer_floor"
                        android:layout_width="120dp"
                        android:gravity="center_vertical"
                        android:paddingLeft="10dp"
                        android:layout_height="50dp"
                        android:id="@+id/lbl_add_customer_floor"
                        />
                    <EditText
                        android:id="@+id/txtFloor"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/box_small"
                        android:alpha="1"
                        android:lines="1"
                        android:singleLine="true"

                        android:paddingLeft="10dp"
                        android:hint="@string/add_customer_floor" />
                    <TextView
                        android:text="@string/add_customer_room"
                        android:layout_width="80dp"
                        android:gravity="center"
                        android:layout_height="50dp"
                        android:id="@+id/lbl_add_customer_room"
                        />
                    <EditText
                        android:id="@+id/txtRoom"
                        android:layout_width="93dp"
                        android:layout_height="wrap_content"
                        android:background="@drawable/box_small"
                        android:alpha="1"
                        android:singleLine="true"

                        android:lines="1"
                        android:paddingLeft="10dp"
                        android:hint="@string/add_customer_room" />
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/layout_customer_add_line6"
                    android:layout_marginTop="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal" >

                    <TextView
                        android:text="@string/add_customer_soi"
                        android:layout_width="120dp"
                        android:gravity="center_vertical"
                        android:layout_height="35dp"
                        android:paddingLeft="10dp"
                        android:id="@+id/lbl_add_customer_soi"
                        />
                    <EditText
                        android:id="@+id/txtSoi"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/box_large"
                        android:alpha="1"
                        android:lines="1"
                        android:singleLine="true"
                        android:paddingLeft="10dp"

                        android:hint="@string/add_customer_soi" />
                    <TextView
                        android:text="@string/add_customer_road"
                        android:layout_width="120dp"
                        android:gravity="center_vertical"
                        android:paddingLeft="10dp"
                        android:layout_height="35dp"
                        android:id="@+id/lbl_add_customer_road" />
                    <EditText
                        android:id="@+id/txtRoad"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/box_large"
                        android:alpha="1"
                        android:lines="1"
                        android:singleLine="true"
                        android:paddingLeft="10dp"
                        android:hint="@string/add_customer_road" />
                    <TextView
                        android:text="@string/add_customer_province"
                        android:layout_width="120dp"
                        android:gravity="center_vertical"
                        android:layout_height="35dp"
                        android:paddingLeft="10dp"
                        android:id="@+id/lblProvince"
                        />
                    <EditText
                        android:singleLine="true"
                        android:layout_width="250dp"
                        android:layout_height="35dp"
                        android:id="@+id/txtProvince"
                        android:background="@drawable/box_login"
                        android:paddingLeft="10dp"
                        />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/layout_customer_add_line7"
                    android:layout_marginTop="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal" >

                    <TextView
                        android:text="@string/add_customer_district"
                        android:layout_width="120dp"
                        android:gravity="center_vertical"
                        android:layout_height="50dp"
                        android:paddingLeft="10dp"
                        android:id="@+id/lbl_add_customer_district"
                        />
                    <EditText
                        android:singleLine="true"
                        android:layout_width="250dp"
                        android:layout_height="35dp"
                        android:id="@+id/txtDistrict"
                        android:background="@drawable/box_login"
                        android:paddingLeft="10dp"
                        />
                    <TextView
                        android:text="@string/add_customer_sub_district"
                        android:layout_width="120dp"
                        android:gravity="center_vertical"
                        android:paddingLeft="10dp"
                        android:layout_height="50dp"
                        android:id="@+id/lbl_add_customer_sub_district" />
                    <EditText
                        android:singleLine="true"
                        android:layout_width="250dp"
                        android:layout_height="35dp"
                        android:id="@+id/txtSubDistrict"
                        android:background="@drawable/box_login"
                        android:paddingLeft="10dp"
                        />
                    <TextView
                        android:text="@string/add_customer_postcode"
                        android:layout_width="120dp"
                        android:gravity="center_vertical"
                        android:layout_height="50dp"
                        android:paddingLeft="10dp"
                        android:id="@+id/lblPostcode"
                        />
                    <EditText
                        android:singleLine="true"
                        android:id="@+id/txtPostcode"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/box_large"
                        android:alpha="1"
                        android:paddingLeft="10dp"
                        android:hint="@string/add_customer_postcode" />
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/layout_customer_add_line4"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal" >
                    <TextView
                        android:text="@string/add_customer_work"
                        android:layout_width="120dp"
                        android:gravity="center_vertical"
                        android:layout_height="35dp"
                        android:paddingLeft="10dp"
                        android:id="@+id/lblWork"
                        />
                    <EditText
                        android:id="@+id/txtWork"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/box_large"
                        android:alpha="1"
                        android:paddingLeft="10dp"
                        android:lines="1"
                        android:singleLine="true"
                        android:hint="@string/add_customer_work" />
                    <TextView
                        android:text="@string/add_customer_district"
                        android:layout_width="120dp"
                        android:gravity="center_vertical"
                        android:layout_height="35dp"
                        android:paddingLeft="10dp"
                        android:id="@+id/lbl_add_customer_district_work"
                        />
                    <EditText
                        android:id="@+id/txtDistrictWork"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/box_large"
                        android:alpha="1"
                        android:lines="1"
                        android:singleLine="true"
                        android:paddingLeft="10dp"
                        android:hint="@string/add_customer_district" />
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/addMobiles"
                        android:orientation="horizontal">
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </ScrollView>

    </LinearLayout>
    <RelativeLayout
        android:layout_alignBottom="@+id/sizeContent"
        android:id="@+id/footer"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:background="@color/footer"
        >
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/back_btn"
            android:id="@+id/btnBack"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:background="@null" />
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/save_btn_"
            android:id="@+id/btnSend"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:background="@null" />
    </RelativeLayout>

</RelativeLayout>
