<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    tools:context="com.apthai.ap_questionaire.app.ResetPasswordActivity">

    <TextView
        android:text="@string/title_activity_reset_password"
        android:layout_width="match_parent"
        android:gravity="center"
        android:background="@drawable/box_title"
        android:paddingTop="10dp"
        android:layout_height="50dp"
        android:id="@+id/project_name" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/img_background"
        android:layout_below="@+id/project_name" />


    <LinearLayout
        android:id="@+id/sizeContent"
        android:layout_width="1000dp"
        android:layout_height="524dp"
        android:background="@color/WHITE"
        android:orientation="vertical"
        android:layout_marginTop="125dp"
        android:layout_centerHorizontal="true"
        android:baselineAligned="false"
        android:clickable="false">
        <TextView
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_height="50dp"
            android:id="@+id/question_title"
            />

        <ScrollView
            android:layout_alignBottom="@+id/lbl_line"
            android:layout_alignTop="@+id/footer"
            android:layout_width="match_parent"
            android:layout_height="380dp"
            android:layout_centerVertical="true"
            android:id="@+id/scrollView"
            android:layout_gravity="center">
            <LinearLayout
                android:id="@+id/AP_content"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical" >
                <TextView
                    android:layout_marginTop="100dp"
                    android:text="@string/reset_password_question"
                    android:layout_width="match_parent"
                    android:gravity="center"
                    android:layout_height="wrap_content"
                    android:id="@+id/question"
                    android:textSize="20dp"
                    />
                <TextView
                    android:text="@string/reset_password_desricption"
                    android:layout_width="match_parent"
                    android:gravity="center"
                    android:layout_height="wrap_content"
                    android:id="@+id/description"
                    />
                <EditText
                    android:layout_marginTop="30dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:ems="10"
                    android:id="@+id/txtEmail"
                    android:background="@drawable/box_email"
                    android:hint="@string/reset_password_hint"
                    android:layout_gravity="center_horizontal" />

            </LinearLayout>
        </ScrollView>
        <RelativeLayout
            android:id="@+id/footer"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:background="@color/footer"
            android:layout_below="@+id/scrollView">
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/btn_back"
                android:id="@+id/btnBack"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:background="@null" />
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/btn_send"
                android:id="@+id/btnSend"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                android:background="@null" />
        </RelativeLayout>
    </LinearLayout>

</RelativeLayout>
